--- a/ncr_ui/src/styles.scss
+++ b/ncr_ui/src/styles.scss
@@ -23,5 +23,10 @@ html, body {
   background-color: green !important;
 } 
 
+:root {
+ 
+    --kendo-color-primary: #209474 !important;
+    --kendo-color-primary-on-surface :  #209474 !important;
+  }
 
 
